--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -10,18 +10,22 @@
         <mat-form-field class="field-full-width">
           <input matInput placeholder ="Email / User Name*" formControlName="emailOruserName" #emailOruserName>
         </mat-form-field>
+          <mat-error *ngIf="(createLoginForm.get('emailOruserName').touched) && createLoginForm.get('emailOruserName').errors?.required">
+          Email /User name is required 
+        </mat-error>
         <mat-form-field class="field-full-width">
           <input matInput type="password" matInput placeholder ="Password*" formControlName="password" #password>
         </mat-form-field>
+        <mat-error *ngIf="(createLoginForm.get('password').touched) && createLoginForm.get('password').errors?.required">
+          Password is required 
+        </mat-error>
       </form>
-
+       <br>
        <button type="submit"  (click)="signinFunction()"
        [disabled]="(createLoginForm.pristine ||createLoginForm.invalid)" 
        mat-raised-button class="btn btn-secondary" >Sign In</button> &nbsp;&nbsp;&nbsp;
        <button mat-raised-button class="btn btn-secondary" (click)="goToSignup()">Sign Up</button> &nbsp;
-       <button (click)="signInWithFB()">Sign in with Facebook</button>
-       <button (click)="goToRequestReset()">Request Reset</button>
-       <button (click)="goToResponseReset()">Response Reset</button>
+       <button mat-raised-button class="btn btn-primary" (click)="signInWithFB()">Sign in with Facebook</button>
   
     </mat-card>
 </div>
