mobile validation added

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-class">
   <div>
     <span class="material-icons">bug_report </span>
-    <a class="navbar-brand" href="/">Split Wise App</a> 
+    <a class="navbar-brand" href="/">Split Wise</a> 
   </div>
   <div>
     <span class="material-icons" [hidden]="!fullName">face </span> 
