--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,7 +14,10 @@
           Email /User name is required 
         </mat-error>
         <mat-form-field class="field-full-width">
-          <input matInput type="password" matInput placeholder ="Password*" formControlName="password" #password>
+          <input matInput [type]="hide ? 'password' : 'text'" matInput placeholder ="Password*" formControlName="password" #password>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
         </mat-form-field>
         <mat-error *ngIf="(createLoginForm.get('password').touched) && createLoginForm.get('password').errors?.required">
           Password is required 
@@ -26,7 +29,7 @@
        mat-raised-button class="btn btn-secondary" >Sign In</button> &nbsp;&nbsp;&nbsp;
        <button mat-raised-button class="btn btn-secondary" (click)="goToSignup()">Sign Up</button> &nbsp;
        <button mat-raised-button class="btn btn-primary" (click)="signInWithFB()">Sign in with Facebook</button>
-  
+       <p> Forgot Your Password ? <a [routerLink]="['/request-reset-password']">Click Here</a></p>
     </mat-card>
 </div>
 
